# smartycrank

./: .gitignore  CLAUDE.md  Cargo.toml  PKGBUILD  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  spotify.rs  tv.rs
