[package]
name = "smartycrank"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
toml = "0.8"
open = "5"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
keyring = "3"
